--- a/eurka-server.properties
+++ b/eurka-server.properties
@@ -1,1 +1,7 @@
 
+server.port:9103
+
+spring.application.name=eureka-server
+eureka.client.serviceUrl.defaultZone:http://localhost:9103/eureka/
+eureka.client.registerWithEureka:false
+eureka.client.fetchRegistry:false
