--- a/eurka-server.properties
+++ b/eurka-server.properties
@@ -2,6 +2,6 @@
 server.port:9103
 
 spring.application.name=eureka-server
-eureka.client.serviceUrl.defaultZone:http://localhost:9103
+eureka.client.serviceUrl.defaultZone:http://localhost:9103/eureka/
 eureka.client.registerWithEureka:false
 eureka.client.fetchRegistry:false
