--- a/microservice-auth.properties
+++ b/microservice-auth.properties
@@ -1,3 +1,3 @@
 server.port:9102
 #Eureka
-eureka.client.serviceUrl.defaultZone:http://localhost:9103EurekaServer/eureka
+eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
